--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,26 @@ dependencies = []
 [project.optional-dependencies]
 amazon = ["boto3"]
 google = ["google-cloud-pubsub", "google-cloud-storage"]
+
+[tool.ruff]
+exclude = [
+    ".git",
+    ".venv",
+    ".ruff_cache",
+]
+
+line-length = 100
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["E", "W", "F", "I", "B", "C4", "UP","ARG001"]
+ignore = ["E402", "E501", "W191", "B904"]
+fixable = ["ALL"]
+unfixable = []
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
