chore: change org referece on dependabot config file

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     schedule:
       interval: "monthly"
     reviewers:
-      - "noverde/sre"
+      - "DotzInc/SRE"
 
   - open-pull-requests-limit: 10
     package-ecosystem: "github-actions"
@@ -14,4 +14,4 @@ updates:
     schedule:
       interval: "monthly"
     reviewers:
-      - "noverde/sre"
+      - "DotzInc/SRE"
